full exercise-collaborative-html

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,34 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="container">
+    <div class="pt-5 text-left">
+        <h1>Contact</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <div class="card w-75 mx-auto mt-3">
+        <div class="card-body bg-light text-dark">
+            <div class="stack float-end">
+                <form>
+                    <div class="row">
+                        <div class="col-auto my-3 d-inline-flex">
+                            <label style="padding-left: 15px;" for="exampleInputEmail1"><strong>Your E-mail</strong></label>
+                            <div class="mx-3 d-block">
+                                <input size="78" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-auto my-3 d-inline-flex">
+                        <label for="exampleFormControlTextarea1" class="form-label"><strong>Your message</strong></label>
+                        <div class="mx-3">
+                            <textarea cols="80" class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Please enter your message here..."></textarea>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="button">
+                            <button style="margin-right: 21px;" type="submit" class="btn btn-primary float-end">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
