--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,29 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Work </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+</head>
+<body>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-9 ml-7">
+            <h1 class="text-muted mb-4">
+                <span class="text-dark">This First Heading</span> Will Catch Your Eye
+            </h1>
+            <p class="ml-5">
+                Hello to anyone reading this. I am working on a project with my fellow bootcamp crew from 4GeeksAcademy. Together we are on a learning journey and this is a great experience for us all. We'll be doing the same thing some day when we get into the field. But for now enjoy this picture of a dog.
+            </p>
+        </div>
+        <div class="col-md-3">
+            <img src="https://picsum.photos/200/200" class="rounded-circle" width="200px" height="200px" alt="Dog Smiling">
+        </div>
+        <hr class="my-2">
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+</html>
