--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,26 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div class="container">
+    <h1 class="mt-5">Portfolio</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac quam vel tortor bibendum gravida. Suspendisse euismod quam eu tellus tincidunt vestibulum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac quam vel tortor bibendum gravida. Suspendisse euismod quam eu tellus tincidunt vestibulum.</p>
+</div>
+
+<div class="container pb-3">
+    <div class="row">
+        <div class="col-md-4 mb-3">
+            <img src="https://cdn.i-scmp.com/sites/default/files/styles/700x400/public/d8/images/canvas/2022/03/17/d3b48f5d-3f63-4e4d-ba13-2481e8a07398_4bacbe2e.jpg?itok=mPTqW7eh&v=1647532939" alt="Insta" class="img-fluid">
+            <div class="mt-2"> <h4 class="text-primary">Instagram Project</h4>
+                <p>We were asked to create an instagram-like </br> feed using Bootstrap</p></div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <img src="https://fragrant.mobiletransaction.org/wp-content/uploads/2022/03/payment-link-smartphone-card.jpg.webp" alt="Payment" class="img-fluid">
+            <div class="mt-2"> <h4 class="text-primary">Payment Form project</h4>
+                <p>We were asked to mimic a payment form </br> using html Forms</p></div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <img src="https://greenleafmedia.com/images/700X400.jpg" alt="Single photo feed" class="img-fluid">
+            <div class="mt-2"> <h4 class="text-primary"> Some Project</h4>
+                <p>We were asked to work in groups and finish </br> a one page project that contains multiple </br> sections</p></div>
+        </div>
+        <hr class="my-2">
+    </div>
+</div>
