--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,11 @@
-<!-- your html code here -->
-<!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div class="position-relative">
+    <img src="https://wallpaperswide.com/download/new_york_city_buildings-wallpaper-1920x540.jpg" alt="Full-width image" class="img-fluid">
+    <div class="position-absolute top-50 start-50 translate-middle w-100" >
+        <div class="bg-white text-center" style="opacity: 0.7; padding: 20px; border-radius: 10px; text-center">
+            <h1 class="fw-bold">CODING IS FUN AND ALL</h1>
+        </div>
+        <div class="bg-white mt-3 text-center" style="opacity: 0.7; padding: 20px; border-radius: 10px; text-center">
+            <h3>BUT WAIT UNTIL YOU GET STUCK :)</h3>
+        </div>
+    </div>
+</div>
