--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,16 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="container bg-white">
+
+    <div class="row">
+        <div class="col-4">
+            <img src="https://picsum.photos/200/200" class="rounded-circle" alt="">
+        </div>
+
+        <div class="col-7">
+            <h1>The Second Heading <span class="text-secondary">Is Pretty Cool Too.</span>
+            </h1>
+
+            <P> Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.                Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fesce dapibus, tellus ac cursus
+                commodo.</P>
+        </div>
+    </div>
+</div>
